
* Incorrect NFSv4 FATTR4_SECURITY_LABEL value. (ws-buglink:9383[])

* Timestamp decoded for Gigamon trailer is not padded correctly. (ws-buglink:9433[])

* SEL Fast Message Bug-fix for Signed 16-bit Integer Fast Meter Messages. (ws-buglink:9435[])

* DNP3 Bug Fix for Analog Data Sign Bit Handling. (ws-buglink:9442[])

* WCDMA RLC dissector cannot assemble PDUs with SNs skipped and wrap-arounded. (ws-buglink:9505[])

* DTLS: fix buffer overflow in mac check. (ws-buglink:9512[])

* [PATCH] Correct data length in SCSI_DATA_IN packets (within iSCSI). (ws-buglink:9521[])

* GSM SMS UDH EMS control expects 4 octets instead of 3 with OPTIONAL 4th. (ws-buglink:9550[])

* Fix "decode as ..." for packet-time.c. (ws-buglink:9563[])

=== New and Updated Features

There are no new features in this release.

=== New Protocol Support

There are no new protocols in this release.

=== Updated Protocol Support

--sort-and-group--

BSSGP
DNP3
DVB-BAT
DVB-CI
GSM MAP
GSM SMS
IEEE 802.11
iSCSI
NFSv4
NTLMSSP v2
RLC
SEL FM
SIP
Time

--sort-and-group--

=== New and Updated Capture File Support

--sort-and-group--

.

--sort-and-group--

== Getting Wireshark

Wireshark source code and installation packages are available from
http://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the http://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference
files, plugins, SNMP MIBS, and RADIUS dictionaries. These locations vary
from platform to platform. You can use About→Folders to find the default
locations on your system.

== Known Problems

Dumpcap might not quit if Wireshark or TShark crashes.
(ws-buglink:1419[])
