@@ -583,7 +583,7 @@ tele_param_user_data(tvbuff_t *tvb, proto_tree *tree, guint len, guint32 offset)
 	offset = 0;
 	bit = 0;
 	if (g_pinfo->private_data && (GPOINTER_TO_UINT(g_pinfo->private_data) == TRUE)) {
-		dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, TRUE, &bit);
+		dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, ASCII_7BITS, &bit);
 	}
 
 	saved_offset = offset;
@@ -645,7 +645,7 @@ tele_param_user_data(tvbuff_t *tvb, proto_tree *tree, guint len, guint32 offset)
         offset = 0;
         bit = 0;
         if (g_pinfo->private_data && (GPOINTER_TO_UINT(g_pinfo->private_data) == TRUE)) {
-            dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, TRUE, &bit);
+            dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, ASCII_7BITS, &bit);
         }
         saved_offset = offset;
         bit = bit ? bit : 8;
@@ -677,7 +677,7 @@ tele_param_user_data(tvbuff_t *tvb, proto_tree *tree, guint len, guint32 offset)
         offset = 0;
         required_octs = len - used;
         if (g_pinfo->private_data && (GPOINTER_TO_UINT(g_pinfo->private_data) == TRUE)) {
-            dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, FALSE, &bit);
+            dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, OTHER, &bit);
         }
 
         if ((cd = g_iconv_open("UTF-8","iso-8859-8")) != (GIConv)-1)
@@ -713,7 +713,7 @@ tele_param_user_data(tvbuff_t *tvb, proto_tree *tree, guint len, guint32 offset)
         offset = 0;
         required_octs = len - used;
         if (g_pinfo->private_data && (GPOINTER_TO_UINT(g_pinfo->private_data) == TRUE)) {
-            dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, FALSE, &bit);
+            dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, OTHER, &bit);
         }
 
         if ((cd = g_iconv_open("UTF-8","iso-8859-1")) != (GIConv)-1)
@@ -763,7 +763,7 @@ tele_param_user_data(tvbuff_t *tvb, proto_tree *tree, guint len, guint32 offset)
         offset = 0;
         bit = 0;
         if (g_pinfo->private_data && (GPOINTER_TO_UINT(g_pinfo->private_data) == TRUE)) {
-            dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, TRUE, &bit);
+            dis_field_udh(tvb_out, tree, &offset, &required_octs, &num_fields, GSM_7BITS, &bit);
         }
 
         out_len = gsm_sms_char_7bit_unpack(bit, required_octs, num_fields, 
